login: Replace macro-based control flow with function calls in utmp
(cherry picked from commit 5a3afa9738f3dbbaf8c0a35665318c1af782111b)
(cherry picked from commit 2f02abb81cee4f6ba65d9e1c89e8e26558e0dac0)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2019-08-13  Florian Weimer  <fweimer@redhat.com>
 
+	* login/utmp_file.c (LOCK_FILE, LOCKING_FAILED, UNLOCK_FILE):
+	Remove macros.
+	(struct file_locking): New.
+	(try_file_lock, file_unlock, file_lock_restore): New functions.
+	(__libc_getutent_r): Use the new functions.
+	(internal_getut_r): Likewise.
+	(__libc_getutline_r): Likewise.
+	(__libc_pututline): Likewise.
+	(__libc_updwtmp): Likewise.
+
+2019-08-13  Florian Weimer  <fweimer@redhat.com>
+
 	* login/getutid_r.c (__getutid_r): _HAVE_UT_ID and _HAVE_UT_TYPE
 	are always true.
 	* login/getutmp.c (getutmp): _HAVE_UT_TYPE, _HAVE_UT_PID,
