login: Use struct flock64 in utmp [BZ #24880]
Commit 06ab719d30b01da401150068054d3b8ea93dd12f ("Fix Linux fcntl OFD
locks for non-LFS architectures (BZ#20251)") introduced the use of
fcntl64 into the utmp implementation.  However, the lock file
structure was not updated to struct flock64 at that point.

(cherry picked from commit 0d5b2917530ccaf8ad312dfbb7bce69d569c23ad)
(cherry picked from commit dbbd748c5f69a2fb4d5d305df2ce15b9e69a46ef)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2019-08-15  Florian Weimer  <fweimer@redhat.com>
 
+	[BZ #24880]
+	* login/utmp_file.c (file_locking_failed): Use struct flock64.
+	(file_locking_unlock): Likewise.
+
+2019-08-15  Florian Weimer  <fweimer@redhat.com>
+
 	[BZ #24879]
 	login: Disarm timer after utmp lock acquisition.
 	* login/utmp_file.c (struct file_locking): Remove.
