--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ The following bugs are resolved with this release:
     7408-2005
   [24867] malloc: Remove unwanted leading whitespace in malloc_info
   [24879] login: Disarm timer after utmp lock acquisition
+  [24880] login: Use struct flock64 in utmp
   [24986] alpha: new getegid, geteuid and getppid syscalls used
     unconditionally
   [25189] Don't use a custom wrapper macro around __has_include
