login: Acquire write lock early in pututline [BZ #24882]
It has been reported that due to lack of fairness in POSIX file
locking, the current reader-to-writer lock upgrade can result in
lack of forward progress.  Acquiring the write lock directly
hopefully avoids this issue if there are only writers.

This also fixes bug 24882 due to the cache revalidation in
__libc_pututline.

Reviewed-by: Carlos O'Donell <carlos@redhat.com>
Change-Id: I57e31ae30719e609a53505a0924dda101d46372e
(cherry picked from commit be6b16d975683e6cca57852cd4cfe715b2a9d8b1)
(cherry picked from commit 83f793e6a63c4bdd1b2f39618040a8317562a1f7)

--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,7 @@ The following bugs are resolved with this release:
   [24867] malloc: Remove unwanted leading whitespace in malloc_info
   [24879] login: Disarm timer after utmp lock acquisition
   [24880] login: Use struct flock64 in utmp
+  [24882] login: Acquire write lock early in pututline
   [24986] alpha: new getegid, geteuid and getppid syscalls used
     unconditionally
   [24899] login: Add nonstring attributes to struct utmp, struct utmpx
