--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,12 @@ Major new features:
 * The audit libraries will avoid unnecessary slowdown if it is not required
   PLT tracking (by not implementing the la_pltenter or la_pltexit callbacks).
 
+Changes to build and runtime requirements:
+
+* The audit module interface version LAV_CURRENT is increased to enable
+  proper bind-now support.  The loader now advertises via the la_symbind
+  flags that PLT trace is not possible.
+
 Deprecated and removed features, and other changes affecting compatibility:
 
 * The function getdirentries is now deprecated, applications should use
