--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,10 @@ Changes to build and runtime requirements:
   proper bind-now support.  The loader now advertises via the la_symbind
   flags that PLT trace is not possible.
 
+* The audit interface on aarch64 is extended to support both the indirect
+  result location register (x8) and NEON Q register.  Old audit modules are
+  rejected by the loader.
+
 Deprecated and removed features, and other changes affecting compatibility:
 
 * The function getdirentries is now deprecated, applications should use
