nss: Implement --no-addrconfig option for getent
The ahosts, ahostsv4, ahostsv6 commands unconditionally pass
AI_ADDRCONFIG to getaddrinfo, which is not always desired.

Reviewed-by: Carlos O'Donell <carlos@redhat.com>
(cherry picked from commit a623f13adfac47c8634a7288e08f821a846bc650)
(cherry picked from commit 767c99850b2eaa236ef18f5e60bfcaccdede6611)

--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,12 @@ Deprecated and removed features, and other changes affecting compatibility:
 * The function getdirentries is now deprecated, applications should use
   either getdents64, readdir64 or readdir.
 
+Major new features:
+
+* The getent tool now supports the --no-addrconfig option. The output of
+  getent with --no-addrconfig may contain addresses of families not
+  configured on the current host i.e. as-if you had not passed
+  AI_ADDRCONFIG to getaddrinfo calls.
 
 The following bugs are resolved with this release:
 
