linux: Fix fstatat on MIPSn64 (BZ #29730)
Commit 6e8a0aac2f883 ("time: Fix overflow itimer tests on 32-bit
systems") changed in_time_t_range to assume a 32-bit time_t. This broke
fstatat on MIPSn64 that was using it with a 64-bit time_t due to
difference between stat and stat64. This commit fix that by adding a
MIPSn64 specific version, which bypasses the EOVERFLOW tests.

Resolves: BZ #29730

Reviewed-by: Adhemerval Zanella  <adhemerval.zanella@linaro.org>
(cherry picked from commit 7457b7eef8dfe8cc48e55b9f9837df6dd397b80d)
(cherry picked from commit dd4131c8322891a0ad7cfb661efa41aecc02b581)
Signed-off-by: Andreas K. Hüttel <dilfridge@gentoo.org>

--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,7 @@ The following bugs are resolved with this release:
   [29638] libc: stdlib: arc4random fallback is never used
   [29657] libc: Incorrect struct stat for 64-bit time on linux/generic
     platforms
+  [29730] broken y2038 support in fstatat on MIPS N64
 
 Version 2.36
 
